# SyncBase

./: .project_cache.json  .sync_cache  AGENTS.md  AGENTS.template.md  PROJECT_STRUCTURE.md  pyproject.toml  yandex_disk_client.py
src/syncbase/: __init__.py  __main__.py  base.py  cli.py  client.py  item.py  project.py  resolver.py
src/syncbase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_overwrite_guard.py  test_resolver.py  test_sync_scenarios.py
tests/test_base/test_project/: .syncignore  README.md  package.json
tests/test_base/test_project/assets/: data.csv
tests/test_base/test_project/docs/: api.md
tests/test_base/test_project/src/: .sync_cache
tests/test_base/test_project/tests/unit/: test_user.py
tests/test_base1/: .gitignore
tests/test_base1/test_category/test_project/: .sync_cache
tests/test_base1/test_category/test_project/assets/css/: style.css
tests/test_base1/test_category/test_project/docs/: .sync_cache
tests/test_base1/test_category/test_project2/: .sync_cache  Очень важный документ1
tests/test_base2/test_category/test_project/: README.md
tests/test_base2/test_category/test_project/assets/: .sync_cache
tests/test_base2/test_category/test_project/src/: calculator.py  main.py
tests/test_base2/test_category/test_project/test2/: .sync_cache
tests/test_base2/test_category/test_project/tests/: .sync_cache  test_calculator.py
tests/test_base2/test_category/test_project2/: .sync_cache
work/: 0_0_2026-06-01_REFACTORING_PLAN.md
(+5 files in other folders)
